tags/2013-08-29_cppreference/Archive/3fe1c0107d63f27f28792d7678c32b3a-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:7:16: error: invalid use of template-name ‘A<T1>::B’ without an argument list
         static A<T1>::B f;
                ^
main.cpp:19:1: error: need ‘typename’ before ‘A<T1>::B’ because ‘A<T1>’ is a dependent scope
 A<T1>::B // clang/gcc accept, msvc rejects missing typename
 ^
